--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="div_grid"> 
         <a href="./pages/map.html"><img class="app_icon" src="./imgs/74c6a3a04b776eb1dd5e5343fbbc1a2c.png" alt="No img?"></a>
         <a href="./pages/kamera.html"><img class="app_icon" src="./imgs/Apple_Camera-512.webp" alt="No img?"></a>
-        <a href="./pages/setting.html"><img class="app_icon" src="./imgs/Apple_Settings-512.webp" alt="No img?"></a>
+        <img class="app_icon cursorPinter" src="./imgs/Apple_Settings-512.webp" alt="No img?" style="cursor: no-drop; position: relative; z-index: 100;">
         <a href="./pages/translete.html"><img class="app_icon" src="./imgs/commbox-app-centrer-icons-Google-Translate-28.webp" alt="No img?"></a>
         <a href="./pages/time.html"><img class="app_icon" src="./imgs/time.webp" alt="No img?"></a>
         <a href=""><img class="app_icon" src="./imgs/11788081.png" alt="No img?"></a>
