--- a/pages/map.html
+++ b/pages/map.html
@@ -10,13 +10,19 @@
     <div class="phone_img_Div">
         <img class="img_phone" src="../IPhone_14_Pro_vector.svg.png" alt="No img?">
         <div style="background-color: black; background-image: none;" class="bac_phone_big">
-        <p class="batareaq">100%</p>
+        <p class="batareaq z_indexx">100%</p>
+        <p class="time_elem">13:14</p>
+        <a href="../index.html"> <button class="prev" style="top: 30px;"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button></a>
+
     <div>
         
     </div>
-        <img class="batareaw" src="../battery-icon-2048x1099-lemqsmr6.png" alt="">
-        <button class="prev">Prev</button>
+    <iframe class="border_iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25118.13162760213!2d65.92168116887848!3d38.846251941008205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f4c036be2ac6453%3A0x716dcff13afa7caf!2sKhanabad%2C%20Qashqadaryo%20Region%2C%20Uzbekistan!5e1!3m2!1sen!2s!4v1734598755571!5m2!1sen!2s" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <img class="batareaw z_indexx" src="../battery-icon-2048x1099-lemqsmr6.png" alt="">
+        <div class="top_border"></div>
+        <!-- <button class="prev">Prev</button> -->
         </div>
   </div>
+  <script src="../js/map.js"></script>
 </body>
 </html>
