--- a/pages/translete.html
+++ b/pages/translete.html
@@ -59,7 +59,7 @@
               <button id="copyButton" disabled>Nusxalash</button>
         </div>
         
-       <a href="../index.html"> <button class="prev"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button></a>
+       <button class="prev"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button>
         </div>
   </div>    
   <script src="../js/translete.js"></script>
