--- a/pages/kamera.html
+++ b/pages/kamera.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kamera va Rasmga Olish</title>
+  <title>KAMERA</title>
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
                </span>
              </button>
         </div>
-       <a href="../index.html"> <button class="prev"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button></a>
+      <button class="prev"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button>
         </div>
   </div>
   <!-- <script src="../js/main.js"></script> -->
