--- a/pages/map.html
+++ b/pages/map.html
@@ -12,7 +12,7 @@
         <div style="background-color: black; background-image: none;" class="bac_phone_big">
         <p class="batareaq z_indexx">100%</p>
         <p class="time_elem">13:14</p>
-        <a href="../index.html"> <button class="prev" style="top: 30px;"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button></a>
+      <button class="prev" style="top: 30px;"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button>
 
     <div>
         
