--- a/pages/time.html
+++ b/pages/time.html
@@ -80,8 +80,7 @@
     </div>
   <audio src="../auds/perfect_alarm (1).mp3"></audio>
         </div>
-        
-       <a href="../index.html"> <button class="prev"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button></a>
+    <button class="prev"><svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#00"><path d="m330-444 201 201-51 51-288-288 288-288 51 51-201 201h438v72H330Z"/></svg></button>
         </div>
   </div>    
     <script>
@@ -102,6 +101,15 @@
     });
   }, 1);
 
+  let qaytishTugmasi= document.querySelector('.prev');
+
+
+qaytishTugmasi.addEventListener("click", () => {
+
+  history.go(-1);
+
+  
+});
 
         function updateTime() {
             const now = new Date();
